# sparsemap

./: .gitignore  CMakeLists.txt
cmake/: FindAD3.cmake
python/: CMakeLists.txt  setup.py
python/sparsemap/: CMakeLists.txt  utils.py
python/sparsemap/layers_pt/: base.py  matching_layer.py  seq_layer.py  tree_layer.py
python/sparsemap/layers_pt/tests/: test_matching_layer.py  test_seq_layer.py  test_tree_layer.py
src/: CMakeLists.txt  FactorMatching.h  FactorSequenceDistance.h  FactorTreeFast.h
